just more stuff done boss.

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 url: http://garbee.github.io/phpr-docs-temp/
+conurl: http://garbee.github.io/phpr-docs-temp/contributor/
+userurl: http://garbee.github.io/phpr-docs-temp/user/
