Added devurl to site config, added intiial contributor files.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 url: http://garbee.github.io/phpr-docs-temp/
 conurl: http://garbee.github.io/phpr-docs-temp/contributor/
 userurl: http://garbee.github.io/phpr-docs-temp/user/
+devurl: http://garbee.github.io/phpr-docs-temp/developer/
