--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ url: http://garbee.github.io/phpr-docs-temp/
 conurl: http://garbee.github.io/phpr-docs-temp/contributor/
 userurl: http://garbee.github.io/phpr-docs-temp/user/
 devurl: http://garbee.github.io/phpr-docs-temp/developer/
+jsurl: http://garbee.github.io/phpr-docs-temp/assets/scripts/
+cssurl: http://garbee.github.io/phpr-docs-temp/assets/style/
+imageurl: http://garbee.github.io/phpr-docs-temp/assets/images/
