Updated URLs in config.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-url: http://garbee.github.io/phpr-docs-temp/
-conurl: http://garbee.github.io/phpr-docs-temp/contributor/
-userurl: http://garbee.github.io/phpr-docs-temp/user/
-devurl: http://garbee.github.io/phpr-docs-temp/developer/
-jsurl: http://garbee.github.io/phpr-docs-temp/assets/scripts/
-cssurl: http://garbee.github.io/phpr-docs-temp/assets/styles/
-imageurl: http://garbee.github.io/phpr-docs-temp/assets/images/
+url: http://garbee.github.io/docs/
+conurl: http://garbee.github.io/docs/contributor/
+userurl: http://garbee.github.io/docs/user/
+devurl: http://garbee.github.io/docs/developer/
+jsurl: http://garbee.github.io/docs/assets/scripts/
+cssurl: http://garbee.github.io/docs/assets/styles/
+imageurl: http://garbee.github.io/docs/assets/images/
